--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,5 +1,5 @@
 # reservation service app props
-message=Spring Cloud Config: Reservation Service\n
+message=Spring Cloud Config: Reservation Service blabla\n
 
 # h2 database server
 #spring.datasource.url=jdbc:h2:tcp://localhost/~/reservationdb
