--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,5 +1,7 @@
+server.port=${PORT:8000}
 # reservation service app props
 message=Spring Cloud Config: Reservation Service blabla\n
+
 
 # h2 database server
 #spring.datasource.url=jdbc:h2:tcp://localhost/~/reservationdb
@@ -9,7 +11,7 @@ message=Spring Cloud Config: Reservation Service blabla\n
 #spring.jpa.hibernate.ddl-auto=validate
 
 # spring cloud stream / redis
-#spring.cloud.stream.bindings.input=reservations
+spring.cloud.stream.bindings.input=reservations
 #spring.redis.host=192.168.99.100
 #spring.redis.port=6379
 
