--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,6 +1,6 @@
 server.port=${PORT:8000}
 # reservation service app props
-message=Spring Cloud Config: Reservation Service blabla\n
+message=Spring Cloud Config: Reservation Service
 
 
 # h2 database server
