--- a/reservation-client.properties
+++ b/reservation-client.properties
@@ -4,9 +4,9 @@ message=Spring Cloud Config: Reservation Client\n
 
 # spring cloud stream / redis
 spring.cloud.stream.bindings.output=reservations
-spring.redis.host=192.168.99.100
-spring.redis.port=6379
+#spring.redis.host=192.168.99.100
+#spring.redis.port=6379
 
 # zipkin / spring cloud sleuth
-spring.zipkin.host=192.168.99.100
-spring.zipkin.port=9410
+#spring.zipkin.host=192.168.99.100
+#spring.zipkin.port=9410
