--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,4 +1,4 @@
 server.port=8000
 message=Hello spring cloud config.
 
-#spring.cloud.stream.bindings.input=reservations
+spring.cloud.stream.bindings.input.destination=reservations
