--- a/reservation-client.properties
+++ b/reservation-client.properties
@@ -1,2 +1,5 @@
 server.port=8050
 spring.cloud.stream.bindings.output.destination=reservations
+
+spring.zipkin.host=localhost
+spring.zipkin.port=9411
