--- a/hystrix-dashboard.properties
+++ b/hystrix-dashboard.properties
@@ -1,1 +1,7 @@
 server.port=8010
+
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=hystrix.stream
+management.endpoints.jmx.exposure.include=*
+management.endpoint.health.show-details=ALWAYS
+management.endpoint.shutdown.enabled=true
