--- a/reservation-client.properties
+++ b/reservation-client.properties
@@ -2,3 +2,5 @@ server.port=8050
 spring.cloud.stream.bindings.output.destination=reservations
 
 spring.zipkin.port=9411
+
+management.endpoints.web.exposure.include=*
