--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,4 +1,4 @@
 server.port=8000
-message=Hello spring cloud config.
+message=Hello spring cloud 2.2.2 config.....
 
 spring.cloud.stream.bindings.input.destination=reservations
